--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ body {
             <p class="icon"><a href="#"><img src="" width="" height="" alt="" /></a></p>
         </section>
         <section id="copyright-info">
-            <small>©2021 Design Revisions LLC. All rights reserved.</small>
+            <small>© copyright ManasBaroi</small>
         </section>
     </footer>
 </body>
